<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/colorSurface"
    tools:context=".activities.LoginActivity"
    android:id="@+id/container">

    <ImageView
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/imageView2"
        android:src="@drawable/moda_s_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent=".4"
        app:layout_constraintVertical_bias="0"
        />

    <LinearLayout
        android:id="@+id/bottomLayout"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="1">
        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:singleLine="true"
            android:lines="1"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:drawableStart="@drawable/ic_web_white"
            android:layout_marginBottom="5dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@drawable/moco_cursor"
            android:hint="@string/server_url_hint"
            android:textSize="18sp"
            android:id="@+id/url" android:layout_column="1"/>
        <EditText
            android:singleLine="true"
            android:lines="1"
            android:maxLines="1"
            android:drawableStart="@drawable/ic_user_white"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:inputType="text"
            android:textCursorDrawable="@drawable/moco_cursor"
            android:textSize="18sp"
            android:id="@+id/username" android:layout_column="1"/>
        <EditText
            android:singleLine="true"
            android:lines="1"
            android:maxLines="1"
            android:drawableStart="@drawable/ic_lock_white"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@drawable/moco_cursor"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textSize="18sp"
            android:ems="10"
            android:id="@+id/password" />
        <Button
            android:layout_marginTop="20dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_hint"
            android:id="@+id/login_button"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linlaHeaderProgress"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <ProgressBar
            android:id="@+id/pbHeaderProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </ProgressBar>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
